# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  Makefile  configuration.yaml  docker-compose.yaml
.github/workflows/: audit.yaml  general.yaml
.sqlx/: query-0aa61f7875596f4aab0452ba0b01bd673c38dac38cc622018375caa92aa10e1f.json
configuration/: base.yaml
migrations/: 20240811060830_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
